browser/themes/shared/tabbrowser/content-area.css
/* ... */
.
dialogOverlay
{
align
-
items
:
center
;
visibility
:
hidden
;
&
[
topmost
=
"
true
"
]
{
z
-
index
:
1
;
}
.
content
-
prompt
-
dialog
>
&
{
display
:
grid
;
align
-
items
:
unset
;
place
-
content
:
center
;
/
*
90
%
for
5
%
top
/
bottom
margins
the
document
height
so
that
*
smaller
dialogs
don
'
t
become
too
big
.
*
/
grid
-
auto
-
rows
:
min
(
90
%
var
(
-
-
doc
-
height
-
px
)
)
;
}
}
.
dialogBox
{
min
-
width
:
0
;
background
-
clip
:
content
-
box
;
display
:
flex
;
padding
:
0
;
overflow
-
x
:
auto
;
outline
:
0
.
5px
solid
var
(
-
-
border
-
color
-
card
)
;
/
*
Ensure
that
dialog
boxes
are
pixel
-
snapped
to
keep
their
internal
layout
*
consistent
regardless
of
whether
the
surrounding
layout
places
them
at
a
*
fractional
position
.
(
This
helps
prevent
arbitrary
1px
shifts
that
could
*
otherwise
appear
inside
of
a
vertically
-
centered
dialog
when
the
*
viewport
-
height
changes
from
being
odd
to
even
.
)
*
/
will
-
change
:
transform
;
&
:
not
(
.
spotlightBox
)
{
box
-
shadow
:
var
(
-
-
box
-
shadow
-
popup
)
;
border
-
radius
:
8px
;
}
/
*
*
In
High
Contrast
Mode
this
prevents
a
dialog
from
visually
bleeding
into
*
the
window
behind
it
which
looks
jarring
.
*
/
media
(
prefers
-
contrast
)
{
outline
-
color
:
WindowText
;
}
&
[
resizable
=
"
true
"
]
{
resize
:
both
;
overflow
:
hidden
;
min
-
height
:
20em
;
}
&
[
sizeto
=
"
available
"
]
{
-
-
box
-
inline
-
margin
:
4px
;
-
-
box
-
ideal
-
width
:
1000
;
-
-
box
-
ideal
-
height
:
650
;
-
-
box
-
max
-
width
-
margin
:
calc
(
100
%
-
2
*
var
(
-
-
box
-
inline
-
margin
)
)
;
-
-
box
-
max
-
height
-
margin
:
100
%
;
-
-
box
-
max
-
height
-
requested
:
100
%
;
-
-
box
-
max
-
width
-
requested
:
100
%
;
max
-
width
:
min
(
var
(
-
-
box
-
ideal
-
width
)
*
1px
var
(
-
-
box
-
max
-
width
-
margin
)
var
(
-
-
box
-
max
-
width
-
requested
)
)
;
max
-
height
:
min
(
var
(
-
-
box
-
ideal
-
height
)
*
1px
var
(
-
-
box
-
max
-
height
-
margin
)
var
(
-
-
box
-
max
-
height
-
requested
)
)
;
width
:
100
%
;
height
:
100
%
;
margin
:
0
;
media
(
min
-
width
:
550px
)
{
-
-
box
-
inline
-
margin
:
min
(
calc
(
4px
+
(
100
%
-
550px
)
/
4
)
16px
)
;
}
media
(
min
-
width
:
800px
)
{
-
-
box
-
inline
-
margin
:
min
(
calc
(
16px
+
(
100
%
-
800px
)
/
4
)
32px
)
;
}
}
:
not
(
.
content
-
prompt
-
dialog
)
>
.
dialogOverlay
>
&
:
not
(
.
spotlightBox
)
{
/
*
Make
dialogs
overlap
with
upper
chrome
UI
.
Not
necessary
for
Spotlight
dialogs
that
are
intended
to
be
centered
above
the
window
or
content
area
.
*
/
margin
-
top
:
-
5px
;
}
/
*
Spotlight
dialogs
are
full
-
size
on
the
content
or
window
area
*
/
&
.
spotlightBox
{
max
-
width
:
none
;
max
-
height
:
none
;
}
/
*
For
window
-
modal
dialogs
we
allow
overlapping
the
urlbar
if
the
window
is
*
small
enough
.
*
/
#
window
-
modal
-
dialog
>
.
dialogOverlay
>
&
:
not
(
.
spotlightBox
)
{
/
*
Do
not
go
below
3px
(
as
otherwise
the
top
of
the
dialog
would
be
*
adjacent
to
or
clipped
by
the
top
of
the
window
)
or
above
the
window
*
size
.
*
/
margin
-
top
:
clamp
(
3px
var
(
-
-
chrome
-
offset
20px
)
-
5px
calc
(
100vh
-
var
(
-
-
subdialog
-
inner
-
height
)
-
5px
)
)
;
}
}
#
window
-
modal
-
dialog
{
overflow
:
visible
;
padding
:
0
;
/
*
Override
default
<
html
:
dialog
>
styles
*
/
border
-
width
:
0
;
background
-
color
:
transparent
;
/
*
This
makes
the
dialog
top
-
aligned
by
default
(
the
dialog
box
will
move
via
*
margin
-
top
above
)
*
/
bottom
:
auto
;
/
*
When
showModal
(
)
is
called
on
a
<
dialog
>
the
<
dialog
>
itself
will
be
*
focused
when
there
'
s
no
content
hence
the
focus
ring
.
However
this
*
focus
ring
is
not
needed
because
we
always
setup
the
content
of
the
dialog
*
after
its
opened
and
manually
focus
an
element
within
it
.
*
/
outline
:
none
;
&
.
spotlight
{
/
*
Spotlight
window
modal
dialogs
should
be
equal
in
size
to
the
window
.
*
/
inset
:
0
;
height
:
auto
;
width
:
auto
;
max
-
height
:
none
;
max
-
width
:
none
;
>
.
dialogOverlay
{
width
:
100
%
;
height
:
100
%
;
}
}
}
.
dialogFrame
{
margin
:
0
;
flex
:
1
;
/
*
Default
dialog
dimensions
*
/
width
:
34em
;
}
.
dialogOverlay
[
topmost
=
"
true
"
]
#
window
-
modal
-
dialog
:
:
backdrop
{
background
-
color
:
rgba
(
28
27
34
0
.
45
)
;
}
.
dialogOverlay
[
hideContent
=
"
true
"
]
[
topmost
=
"
true
"
]
{
background
-
color
:
var
(
-
-
tabpanel
-
background
-
color
)
;
}
/
*
For
the
window
-
modal
dialog
the
background
is
supplied
by
the
HTML
dialog
*
backdrop
so
the
dialogOverlay
background
above
"
double
backgrounds
"
-
so
*
we
remove
it
here
:
*
/
#
window
-
modal
-
dialog
>
.
dialogOverlay
[
topmost
=
"
true
"
]
{
background
-
color
:
transparent
;
}

