Bug 1967677 - Don't limit sizeto=available dialogs to 1000x600px. r=desktop-theme-reviewers,tabbrowser-reviewers,mstriemer,dao
This was always kind of the intention but it does look off with bigger
screens. Instead, keep the effective 80vw width from before my patch on
large screens, but allow the margin to shrink dynamically, and do the
same for height.

Differential Revision: https://phabricator.services.mozilla.com/D250410

UltraBlame original commit: 7fcb301585470fa0b9f0db7c39acf395c4041706

--- a/browser/themes/shared/tabbrowser/content-area.css
+++ b/browser/themes/shared/tabbrowser/content-area.css
@@ -2368,192 +2368,6 @@ available
 "
 ]
 {
--
--
-box
--
-inline
--
-margin
-:
-4px
-;
--
--
-box
--
-ideal
--
-width
-:
-1000
-;
--
--
-box
--
-ideal
--
-height
-:
-650
-;
--
--
-box
--
-max
--
-width
--
-margin
-:
-calc
-(
-100
-%
--
-2
-*
-var
-(
--
--
-box
--
-inline
--
-margin
-)
-)
-;
--
--
-box
--
-max
--
-height
--
-margin
-:
-100
-%
-;
--
--
-box
--
-max
--
-height
--
-requested
-:
-100
-%
-;
--
--
-box
--
-max
--
-width
--
-requested
-:
-100
-%
-;
-max
--
-width
-:
-min
-(
-var
-(
--
--
-box
--
-ideal
--
-width
-)
-*
-1px
-var
-(
--
--
-box
--
-max
--
-width
--
-margin
-)
-var
-(
--
--
-box
--
-max
--
-width
--
-requested
-)
-)
-;
-max
--
-height
-:
-min
-(
-var
-(
--
--
-box
--
-ideal
--
-height
-)
-*
-1px
-var
-(
--
--
-box
--
-max
--
-height
--
-margin
-)
-var
-(
--
--
-box
--
-max
--
-height
--
-requested
-)
-)
-;
 width
 :
 100
@@ -2568,78 +2382,200 @@ margin
 :
 0
 ;
-media
+/
+*
+NOTE
 (
-min
--
-width
-:
-550px
+emilio
 )
-{
+:
+This
+is
+a
+bit
+tricky
+but
+basically
+what
+we
+want
+to
+do
+is
+*
+guarantee
+a
+size
+between
+80
+%
+(
+or
+90
+%
+for
+height
+)
+and
+100
+%
+of
+the
+*
+available
+space
+with
+some
+variable
+spacing
+when
+the
+available
+space
+is
+*
+over
+600px
+.
+The
+2
+controls
+the
+growth
+of
+the
+margin
+with
+a
+larger
+*
+number
+reaching
+the
+80
+%
+width
+later
+effectively
+.
+*
+/
 -
 -
 box
 -
-inline
--
-margin
-:
-min
-(
-calc
-(
-4px
-+
-(
-100
-%
--
-550px
-)
-/
-4
-)
-16px
-)
-;
-}
-media
-(
-min
+max
 -
 width
+-
+default
 :
-800px
+clamp
+(
+80
+%
+100
+%
++
+(
+600px
+-
+100
+%
 )
-{
+/
+2
+100
+%
+)
+;
 -
 -
 box
 -
-inline
+max
 -
-margin
+height
+-
+default
 :
-min
+clamp
 (
-calc
-(
-16px
-+
-(
+90
+%
 100
 %
++
+(
+600px
 -
-800px
+100
+%
 )
 /
-4
-)
-32px
+2
+100
+%
 )
 ;
-}
+max
+-
+width
+:
+var
+(
+-
+-
+box
+-
+max
+-
+width
+-
+requested
+var
+(
+-
+-
+box
+-
+max
+-
+width
+-
+default
+)
+)
+;
+max
+-
+height
+:
+var
+(
+-
+-
+box
+-
+max
+-
+height
+-
+requested
+var
+(
+-
+-
+box
+-
+max
+-
+height
+-
+default
+)
+)
+;
 }
 :
 not
